amf-cli/shared/src/test/resources/parser-results/raml/error/uses-in-object.raml
#%RAML 1.0 DataType

uses:
  lib: types_library.raml

properties:
  telephoneNumber:
    description: Description
    displayName: telephone number
    type: lib.telephoneNumber
    example: "923-251656"
